--- a/env.template
+++ b/env.template
@@ -9,6 +9,6 @@ MONGO_COLLECTION=users
 MONGO_USERNAME=your_username_here
 MONGO_PASSWORD=your_password_here
 
-# Example (DO NOT USE THESE VALUES):
+# Example format (replace with your actual values):
 # MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-# MONGO_DATABASE=my_database
+# MONGO_DATABASE=your_database_name
